@@ -15,9 +15,10 @@
     - Gestion des droits interne à l'addon
 
 == Technique
-    Fix pour le chargement des icones en banque
-    Optimisation des données à synchroniser
-    Limitation du flux de données si beaucoup de données à synchroniser
-    Gestion du cas A reroll de B et B reroll de C
-    Parametres par perso (position icone minimap)
-    Ajout d'une option de debug
+    - Fix pour le chargement des icones en banque
+    - Optimisation des données à synchroniser
+        Limitation du flux de données si beaucoup de données à synchroniser
+
+    - Gestion du cas A reroll de B et B reroll de C
+    - Parametres par perso (position icone minimap)
+    - Ajout d'une option de debug
