@@ -7,8 +7,6 @@ local guildName
 local function InitData()
     if GT_SavedData == nil then GT_SavedData = {} end
     if GT_SavedData.options == nil then GT_SavedData.options = {} end
-    if GT_SavedData.options.minimapButton == nil then GT_SavedData.options.minimapButton = {} end
-    if GT_SavedData.options.minimapButton.minimapPos == nil then GT_SavedData.options.minimapButton.minimapPos = 200 end
     if GT_SavedData[realmName] == nil then GT_SavedData[realmName] = {} end
     if GT_SavedData[realmName][guildName] == nil then GT_SavedData[realmName][guildName] = {} end
 
@@ -49,12 +47,16 @@ local function InitData()
 
     -- PER CHARACTER DATA
 
-    if GT_CharacterSavedData == nil then
-        GT_CharacterSavedData = {}
-    end
-
-    if GT_CharacterSavedData.bankContent == nil then
-        GT_CharacterSavedData.bankContent = {}
+    if GT_CharacterSavedData == nil then GT_CharacterSavedData = {} end
+    if GT_CharacterSavedData.bankContent == nil then GT_CharacterSavedData.bankContent = {} end
+    if GT_CharacterSavedData.options == nil then GT_CharacterSavedData.options = {} end
+    if GT_CharacterSavedData.options.minimapButton == nil then GT_CharacterSavedData.options.minimapButton = {} end
+    if GT_CharacterSavedData.options.minimapButton.minimapPos == nil then
+        if GT_SavedData.options.minimapButton.minimapPos ~= nil then --Recuperation des datas de la 0.1.1
+            GT_CharacterSavedData.options.minimapButton.minimapPos = GT_SavedData.options.minimapButton.minimapPos
+        else
+            GT_CharacterSavedData.options.minimapButton.minimapPos = 200
+        end
     end
 
     GuildRoster()
