@@ -1,3 +1,9 @@
+### = develop
+**Features**
+
+**Technical**
+- Minimap button config split by character
+
 ### = 0.1.1
 - Remove debug logs
 
